fix content overflow

--- a/client/frontend/sale.css
+++ b/client/frontend/sale.css
@@ -19,7 +19,6 @@
 }
 
 .products-container {
-    width: 100%;
     overflow: auto;
     max-height: 100vh;
     margin: 8px;
